:tada: Slackにメッセージを出す例

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,27 @@ services:
     image: hashicorp/terraform:latest
     container_name: terraform_env
     volumes:
-      # - ~/.aws:/root/.aws:ro
       - ./infrastructure:/workdir
     working_dir: "/workdir/service"
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_REGION
+
+  projex:
+    image: alertlogic/erllambda:20.3-elixir
+    container_name: project_elixir
+    volumes:
+      - ./infrastructure/src:/buildroot
+    working_dir: "/buildroot"
+    environment:
+      - MIX_ENV=prod
+
+  buildex:
+    image: alertlogic/erllambda:20.3-elixir
+    container_name: build_elixir
+    volumes:
+      - ./infrastructure/src:/buildroot
+    working_dir: "/buildroot/lambda_ex"
+    environment:
+      - MIX_ENV=prod
