:zap: adopt faas_base

--- a/infrastructure/functions/trial/.gitignore
+++ b/infrastructure/functions/trial/.gitignore
@@ -1,5 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+/_aws/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
@@ -7,7 +8,7 @@
 # The directory Mix downloads your dependencies sources to.
 /deps/
 
-# Where 3rd-party dependencies like ExDoc output generated docs.
+# Where third-party dependencies like ExDoc output generated docs.
 /doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
