--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     working_dir: "/workspace/service"
 
   elixir:
-    image: alertlogic/erllambda:20.3-elixir
+    image: erintheblack/elixir-lambda-builder:al2_1.10.4
     volumes:
       - ./infrastructure/functions:/buildroot
     environment:
